--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,4 +1,5 @@
 @import '../../assets/css/common.scss';
+@import '../../../node_modules/font-awesome/scss/font-awesome.scss';
 .v-home {
 	.col-1,.col-2,.col-3 {
 		position: absolute;
