--- a/src/pages/index/style/v-category.scss
+++ b/src/pages/index/style/v-category.scss
@@ -11,11 +11,20 @@
     .v-category-list {
       height: 35px;
       line-height: 35px;
+      font-size: 14px;
+      padding-left: 50px;
+      position: relative;
       &:nth-child(odd) {
-        
+
       }
       &:nth-child(even) {
         background-color: #e4e4e4;
+      }
+      .v-category-icon {
+        font-size: 20px;
+        position: absolute;
+        top: 8px;
+        left: 15px;
       }
       .v-category-name {
         color: #444;
