--- a/src/pages/index/style/v-category.scss
+++ b/src/pages/index/style/v-category.scss
@@ -7,6 +7,7 @@
   bottom: 0;
   background-color: $mainBackgroundColor;
   border-right: 1px solid #f2f2f2;
+  overflow-y: auto;
   .v-category-lists {
     .v-category-list {
       height: 35px;
@@ -14,6 +15,7 @@
       font-size: 14px;
       padding-left: 50px;
       position: relative;
+      cursor: pointer;
       &:nth-child(odd) {
 
       }
@@ -25,6 +27,7 @@
         position: absolute;
         top: 8px;
         left: 15px;
+        color: #777;
       }
       .v-category-name {
         color: #444;
